# extinfo

./: .envrc  .gitignore  .pre-commit-config.yaml  .pythonrc.py  README.rst  pyproject.toml  renovate.json  setup.cfg
extinfo/: cli.py  exceptions.py  scraper.py  utils.py
extinfo/extractors/: __init__.py  fileinfo_com.py  filesuffix_com.py
