[tool.poetry]
name = "extinfo"
version = "0.0.2"
description = "Scrape information about file extensions from web sources"
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]
license = "Apache 2.0"
readme = "README.rst"
repository = "https://github.com/rpdelaney/extinfo"
homepage = "https://pypi.org/project/extinfo"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.scripts]
extinfo = "extinfo.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
deal = "^4.19.1"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.6"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.7.0"
flake8-simplify = "^0.14.2"
mypy = "^0.940"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8-docstrings = "^1.6.0"
types-requests = "^2.27.12"

[tool.mypy]
plugins = ["deal.mypy"]

[tool.black]
line-length = 79
target_version = [ "py310",]

[tool.isort]
combine_star = true
indent = "    "
length_sort = false
line_length = 79
multi_line_output = 3
include_trailing_comma = true  # this prevents isort from fighting with black

[tool.poetry.dev-dependencies.isort]
version = "^5.10.1"
extras = [ "pyproject",]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--doctest-modules"
]
filterwarnings = ["error"]
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
